--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="diane">DIANE</a></li>
                 <li><a href="merlin">MERLIN</a></li>
                 <li><a href="gowther">GOWTHER</a></li>
-                <li><a href="king">king</a></li>
+                <li><a href="king">KING</a></li>
             </ul>
         </nav>
     </header>
