Termino da primeira tela

--- a/index.html
+++ b/index.html
@@ -21,7 +21,28 @@
         </nav>
     </header>
     <main>
-        <section id="meliodas" class="grupo"></section>
+        <section id="meliodas" class="grupo">
+            <div id="imgMeliodas">
+                <img src="./img/meliodas.png" alt="meliodinha">
+            </div>
+            <div id="escritas">
+                <div id="container">
+                    <div id="textoMeliodas">
+                        <h1>Meliodas - IRA</h1>
+                    </div>
+                    <div id="subMeliodas">
+                        <p>O líder do grupo e o pecado da Ira. Ele é um poderoso guerreiro com a habilidade de 
+                            reação total e possui uma
+                            personalidade divertida, mas esconde um passado sombrio.</p>
+                    </div>
+                </div>
+                <div id="caixaTitulos">
+                    <h1>"O Dragão da Ira"</h1>
+                    <h1>ou</h1>
+                    <h1>simplesmente "Capitão"</h1>
+                </div>
+            </div>
+        </section>
         <section id="escanor" class="grupo"></section>
         <section id="ban" class="grupo"></section>
         <section id="diane" class="grupo"></section>
