Terminando a segunda tela

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header>
         <nav>
             <ul>
-                <li><a href="meliodas">MELIODAS</a></li>
-                <li><a href="escanor">ESCANOR</a></li>
-                <li><a href="ban">BAN</a></li>
-                <li><a href="diane">DIANE</a></li>
-                <li><a href="merlin">MERLIN</a></li>
-                <li><a href="gowther">GOWTHER</a></li>
-                <li><a href="king">KING</a></li>
+                <li><a href="#meliodas">MELIODAS</a></li>
+                <li><a href="#escanor">ESCANOR</a></li>
+                <li><a href="#ban">BAN</a></li>
+                <li><a href="#diane">DIANE</a></li>
+                <li><a href="#merlin">MERLIN</a></li>
+                <li><a href="#gowther">GOWTHER</a></li>
+                <li><a href="#king">KING</a></li>
             </ul>
         </nav>
     </header>
@@ -25,8 +25,8 @@
             <div id="imgMeliodas">
                 <img src="./img/meliodas.png" alt="meliodinha">
             </div>
-            <div id="escritas">
-                <div id="container">
+            <div class="escritas">
+                <div class="container">
                     <div id="textoMeliodas">
                         <h1>Meliodas - IRA</h1>
                     </div>
@@ -43,7 +43,30 @@
                 </div>
             </div>
         </section>
-        <section id="escanor" class="grupo"></section>
+        <section id="escanor" class="grupo">
+            <div class="escritas">
+                <div class="container">
+                    <div id="textoEscanor">
+                        <h1>ESCANOR - ORGULHO</h1>
+                    </div>
+                    <div id="subEscanor">
+                        <p>
+                            O pecado do Orgulho, Escanor é o homem mais forte, cuja força aumenta com o sol. 
+                            Ele tem uma personalidade arrogante, mas também um lado gentil que emerge 
+                            em momentos cruciais.
+                        </p>
+                    </div>
+                </div>
+                <div id="caixaTitulosEscanor">
+                    <h1>"O Pecado do Orgulho"</h1>
+                    <h1>ou</h1>
+                    <h1>"O Homem Mais Forte"</h1>
+                </div>
+            </div>
+            <div id="imgEscanor">
+                <img src="./img/escanor.png" alt="escanor">
+            </div>
+        </section>
         <section id="ban" class="grupo"></section>
         <section id="diane" class="grupo"></section>
         <section id="merlin" class="grupo"></section>
