Termino da terceira tela

--- a/index.html
+++ b/index.html
@@ -67,7 +67,43 @@
                 <img src="./img/escanor.png" alt="escanor">
             </div>
         </section>
-        <section id="ban" class="grupo"></section>
+        <section id="ban" class="grupo">
+            <div class="grandeContainer">
+                <div class="conjunto">
+                    <div id="imgBan">
+                        <img src="./img/ban.png" alt="ban">
+                    </div>
+                    <div class="escriturasBan">
+                        <div class="textoBan">
+                            <h1>BAN - LUXÚRIA</h1>
+                        </div>
+                        <div class="subBan">
+                            <p>
+                                O pecado da Luxúria, Ban é um ladrão imortal com habilidades de regeneração. 
+                                Ele tem um coração grande e é leal aos amigos, mas também tem uma busca obsessiva 
+                                por um amor perdido.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="conjunto">
+                    <div id="imgBan">
+                        <img src="./img/banarma.png" alt="ban">
+                    </div>
+                    <div class="escriturasBan">
+                        <div class="textoBan">
+                            <h1>COURECHOUSE</h1>
+                        </div>
+                        <div class="subBan">
+                            <p>
+                                Como membro dos Sete Pecados Capitais, Ban possuía um tesouro sagrado, 
+                                que foi roubado durante sua prisão. É um equipamento de quatro seções.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="diane" class="grupo"></section>
         <section id="merlin" class="grupo"></section>
         <section id="gowther" class="grupo"></section>
