Terminando a quarta tela

--- a/index.html
+++ b/index.html
@@ -104,7 +104,24 @@
                 </div>
             </div>
         </section>
-        <section id="diane" class="grupo"></section>
+        <section id="diane" class="grupo">
+            <div class="grandeContainerDiane">
+                <div id="imgDiane">
+                    <img src="./img/diane.png" alt="diane">
+                </div>
+                <div class="escrituraDiane">
+                    <div id="textoDiane">
+                        <h1>DIANE - INVEJA </h1>                    
+                    </div>
+                    <div id="subDiane">
+                        <p>A gigante que representa a Inveja. Ela é extremamente forte e tem a 
+                            habilidade de controlar a terra. Sua luta para encontrar seu 
+                            lugar no mundo é um tema central.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="merlin" class="grupo"></section>
         <section id="gowther" class="grupo"></section>
         <section id="king" class="grupo"></section>
